2009-06-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c: sprintf() -> Tcl_ObjPrintf() conversion.

2009-06-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c:	The value stashed in iPtr->compiledProcPtr
	* generic/tclProc.c:	when compiling a proc survives too long.  We
	* tests/execute.test:	only need it there long enough for the right
	TclInitCompileEnv() call to re-stash it into envPtr->procPtr.  Once
	that is done, the CompileEnv controls.  If we let the value of
	iPtr->compiledProcPtr linger, though, then any other bytecode compile
	operation that takes place will also have its CompileEnv initialized
	with it, and that's not correct.  The value is meant to control the
	compile of the proc body only, not other compile tasks that happen
	along.  Thanks to Carlos Tasada for discovering and reporting the
	problem.  [Bug 2802881].

2009-06-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Revised [format] to not overflow the
	integer calculations computing the length of the %ll formats of
	really big integers.  Also added protections so that [format]s that
	would produce results overflowing the maximum string length of Tcl
	values throw a normal Tcl error instead of a panic. [Bug 2801413]

2006-06-09  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclGetDate.y: Fixed a thread safety bug in the generated
	* library/clock.tcl:    Bison parser (needed a %pure-parser
	* tests/clock.test:     declaration to avoid static variables).
				Discovered that the %pure-parser declaration
	                        allowed for returning the Bison error message
	                        to the Tcl caller in the event of a syntax
	                        error, so did so.
	* generic/tclDate.c: bison 2.3
	
2006-06-08  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Asia/Dhaka: New DST rule for Bangladesh.
	(Olson's tzdata2009i.)

2009-06-02  Don Porter  <dgp@users.sourceforge.net>
