@@ -1,3 +1,10 @@
+2009-07-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tclWinInt.h:   Handle the GetUserName API call via the
+	* win/tclWin32Dll.c: tclWinProcs indirection structure. This
+	* win/tclWinInit.c:  fixes a problem obtaining the username when
+	the USERNAME environment variable is unset [Bug 2806622]
+
 2009-06-15  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c: sprintf() -> Tcl_ObjPrintf() conversion.
